--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Isha Addo - Litagator</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Isha Addo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/IshaAddo.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,23 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Isha Addo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Paralegal📚</div>
+        <p class="lead mb-4">History Major<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        Hello, I am Isha Addo, a sophmore of the University of California Riverside. I hope to graduate with a Bachelor's degree in History with a concentration on the East African and Southeast Asian regions. In highschool I graduated at the top of my class and was also honored with the title/position of valedictorian. My time in high school was a blur; all I did was study and volunteer with my mosque and the local Animal shelter, Friends Of Upland Animal Shelter. I wasn’t given the opportunity to participate in many extracurricular activities during highschool but, luckily UCR afforded me many options. My time in UCR has shown me the wonderful world of History and how the subject has more to offer than people might realize. I was able to be a part of the Black Student Union, Muslim Student Association, and Abyssinian Student Union; all of the afermentioned clubs have allowed me to grow into positions of leadership and feinitely helped me grow my patience. I also held a job all throughout college and learned to juggle multiple things efficiently at once. The diversity of the campus and in my life had inspired me to get in touch with the roots of the world and I chose to become a History major. I also always had a passion for justice and the field of law appealed to me more than any other career field. I find that having a degree in history has allowed me to see other aspects of the law that would otherwise go unnoticed by others. I grew up in the So-Cal area and still live here to this day. Riverside is where I went to school but I lived in the Inland Empire my entire life. I am hoping to work in the greater Los Angeles area and hoping to run for DIstrict Attorney some day. I currently work as an after school Tutor for The Learning Connection which is a program run by the Pomona School district. Working with my students and hearing about their diverse backgrounds really put me in touch with the world around me which I will be forever grateful for. As of right now I am hoping to become a paralegal after I graduate from UCR and get some field experience before taking my talents to law school where I hope to study litigation to become a litigator.In addition to my passion for legal juncture and history I also enjoy the scenery of California and frequent the numerous parks and trails the state has to offer. In my most recent position as an after tutor, I had the opportunity to develop the skills and experience necessary to succeed in both my professional life and private life. 
+<br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a target="_blank" href="https://github.com">
+          
+          <a target="_blank" href="https://github.com/ishaaddo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href= "https://twitter.com/Isha_addo">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:iaddo001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +89,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Hostess</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.dennys.com/">Denny's</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Seated Guests X<br> 
+              • Maintained the Guestlist<br>
+              • Experience with People,Money Management, and diffusing tense situations<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">Feburary 2019 - August 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">After School Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://proudtobe.pusd.org/apps/pages/TLCprogram">The Learning Connection</a></div>
             <p>
-              • Responsible for checking out customers<br>
+              • Responsible for creatign and curating afterschool activities<br>
               • etc etc<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">SRC Steward</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://recreation.ucr.edu/">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Opened the Rec. Center<br>
+            • Diffused situations<br>
+            • Checked people in <br>
+            • etc etc<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - Present</span>
           </div>
         </div>
 
@@ -151,34 +148,21 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">City of Knowledge K-12th</h3>
+            <div class="subheading mb-3">Highschool Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2004 - May 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">History Major</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2018 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +175,19 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
+            <img src="img/download.jpeg" width="500px">
+        </center>
+      </div>
+      <center>
             <img src="img/image2.jpeg" width="500px">
+        </center>
+      </div>
+      <center>
+            <img src="img/image1.jpeg" width="500px">
+        </center>
+      </div>
+      <center>
+            <img src="img/Scan 3.jpeg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +195,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Isha Addo</center><br>
 
 
   </div>
